2019-12-21 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: update install directions

2019-12-12 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/apache_config.c: copying also upload_files_to_var in
    Rivet_MergeConfig

2019-12-06 Massimo Manghi <mxmanghi@apache.org>
    * doc/rivet.css: new color scheme for docbook manual

2019-11-29 Brice Hamon <bhdec@apache.org>
   * src/mod_rivet_ng/mod_rivet_cache.h: added RivetCache_DeleteEntry
   * src/mod_rivet_ng/mod_rivet_cache.c: 
   * src/mod_rivet_ng/rivetCore.c: fixed crash when rvt file not readable

2019-10-13 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml: configuration directives table expanded
    * doc/xml/internals.xml: documenting the changes in the bridge API

2019-09-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivetCore.c: revised argument checking

2019-09-29 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml: Completed manual page for command ::rivet::thread_id
    * src/mod_rivet_ng/rivetCore.c: Rivet_GetThreadId rewritten. Now the
    command accepts an optional argument to select decimal or hexadecimal (default)
    output 

2019-08-05 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/directives.xml: Documenting SingleThreadExit directive

2019-07-27 Massimo Manghi <mxmanghi@apache.org>
    * doc/xml/commands.xml,src/mod_rivet_ng/rivetCore.c: Add ::rivet::thread_id
    manual page

2019-06-30 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_worker_mpm.c: Removed unnecessary access to thread private data
    in WorkerBridge_Finalize

2019-06-25 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/rivet_worker_mpm.c: Better handling of exit signal, assigning tasks
    to functions in a more consistent way. Worker_Shutdown declared as 'static'
    * src/mod_rivet_ng/rivet_[prefork|lazy]_mpm.c: New scheme for bridge function names 