@@ -1,3 +1,6 @@
+2020-01-19 Massimo Manghi <mxmanghi@apache.org>
+    * doc/xml/commands.xml: remove entry for command incr0 (dropped in 3.0)
+
 2019-12-21 Massimo Manghi <mxmanghi@apache.org>
     * INSTALL: update install directions
 
